--- a/cli/BUILD
+++ b/cli/BUILD
@@ -3,10 +3,11 @@ go_library(
     srcs = ["cli.go"],
     visibility = ["PUBLIC"],
     deps = [
-        "//third_party/go:automaxprocs",
-        "//third_party/go:cli-init",
-        "//third_party/go:http-admin",
-        "//third_party/go:remote-apis",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//flags",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_thought-machine_http-admin//:http-admin",
+        "///third_party/go/go.uber.org_automaxprocs//maxprocs",
     ],
 )
 
@@ -15,6 +16,6 @@ go_test(
     srcs = ["cli_test.go"],
     deps = [
         ":cli",
-        "//third_party/go:testify",
+        "///third_party/go/github.com_stretchr_testify//assert",
     ],
 )
