--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -9,25 +9,35 @@ go_library(
         "//mettle/worker/...",
     ],
     deps = [
-        "//grpcutil",
+        "///third_party/go/cloud.google.com_go_storage//:storage",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/client",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/uploadinfo",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/semver",
+        "///third_party/go/github.com_dgraph-io_ristretto//:ristretto",
+        "///third_party/go/github.com_golang_protobuf//proto",
+        "///third_party/go/github.com_hashicorp_go-multierror//:go-multierror",
+        "///third_party/go/github.com_klauspost_compress//zstd",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_prometheus_client_golang//prometheus",
         "//proto/purity",
+        "///third_party/go/gocloud.dev//blob",
+        "///third_party/go/gocloud.dev//blob/fileblob",
+        "///third_party/go/gocloud.dev//blob/gcsblob",
+        "///third_party/go/gocloud.dev//blob/memblob",
+        "///third_party/go/gocloud.dev//gcerrors",
+        "///third_party/go/golang.org_x_exp//slices",
+        "///third_party/go/golang.org_x_sync//errgroup",
+        "///third_party/go/google.golang.org_api//googleapi",
+        "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//health/grpc_health_v1",
+        "///third_party/go/google.golang.org_grpc//status",
+        "//grpcutil",
         "//rexclient",
-        "//third_party/go:api",
-        "//third_party/go:cli-init",
-        "//third_party/go:cloud-storage",
-        "//third_party/go:errgroup",
-        "//third_party/go:exp",
-        "//third_party/go:genproto",
-        "//third_party/go:go-multierror",
         "//third_party/go:grpc",
-        "//third_party/go:protobuf",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go:ristretto",
-        "//third_party/go:rpc",
-        "//third_party/go:zstd",
-        "//third_party/go/gocloud",
-        "//third_party/go/prometheus",
     ],
 )
 
@@ -37,12 +47,11 @@ go_test(
     data = [":test_data"],
     deps = [
         ":rpc",
+        "///third_party/go/github.com_klauspost_compress//zstd",
+        "///third_party/go/github.com_stretchr_testify//assert",
+        "///third_party/go/github.com_stretchr_testify//require",
+        "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
         "//grpcutil",
-        "//third_party/go:genproto",
-        "//third_party/go:grpc",
-        "//third_party/go:remote-apis",
-        "//third_party/go:testify",
-        "//third_party/go:zstd",
     ],
 )
 
