--- a/lucidity/rpc/BUILD
+++ b/lucidity/rpc/BUILD
@@ -7,12 +7,12 @@ go_library(
     resources = glob(["static/*.*"]),
     visibility = ["//lucidity/..."],
     deps = [
+        "///third_party/go/github.com_golang_protobuf//jsonpb",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "///third_party/go/google.golang.org_api//idtoken",
         "//grpcutil",
         "//proto/lucidity",
-        "//third_party/go:api",
-        "//third_party/go:cli-init",
-        "//third_party/go:protobuf",
-        "//third_party/go/prometheus",
     ],
 )
 
@@ -22,7 +22,7 @@ go_test(
     resources = glob(["static/*.*"]),
     deps = [
         ":rpc",
+        "///third_party/go/github.com_stretchr_testify//assert",
         "//proto/lucidity",
-        "//third_party/go:testify",
     ],
 )
