--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -3,20 +3,25 @@ go_library(
     srcs = ["api.go"],
     visibility = ["//mettle/..."],
     deps = [
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/client",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/semver",
+        "///third_party/go/github.com_golang_protobuf//proto",
+        "///third_party/go/github.com_golang_protobuf//ptypes",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "//proto/mettle",
+        "///third_party/go/gocloud.dev//pubsub",
+        "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
+        "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//metadata",
+        "///third_party/go/google.golang.org_grpc//status",
         "//grpcutil",
         "//mettle/common",
-        "//proto/mettle",
         "//rexclient",
-        "//third_party/go:cli-init",
-        "//third_party/go:genproto",
         "//third_party/go:grpc",
-        "//third_party/go:logging",
-        "//third_party/go:protobuf",
-        "//third_party/go:rpc",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go/gocloud",
-        "//third_party/go/prometheus",
     ],
 )
 
@@ -25,13 +30,19 @@ go_test(
     srcs = ["api_test.go"],
     deps = [
         ":api",
-        "//grpcutil",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_golang_protobuf//proto",
+        "///third_party/go/github.com_golang_protobuf//ptypes",
+        "///third_party/go/github.com_stretchr_testify//assert",
+        "///third_party/go/github.com_stretchr_testify//require",
         "//proto/mettle",
-        "//third_party/go:genproto",
+        "///third_party/go/gocloud.dev//pubsub",
+        "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
+        "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//status",
+        "//grpcutil",
+        "//mettle/common",
         "//third_party/go:grpc",
-        "//third_party/go:protobuf",
-        "//third_party/go:remote-apis",
-        "//third_party/go:testify",
-        "//third_party/go/gocloud",
     ],
 )
