--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -3,13 +3,17 @@ go_library(
     srcs = ["common.go"],
     visibility = ["//mettle/..."],
     deps = [
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_golang_protobuf//proto",
+        "///third_party/go/github.com_golang_protobuf//ptypes",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/gocloud.dev//pubsub",
+        "///third_party/go/gocloud.dev//pubsub/gcppubsub",
+        "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
+        "///third_party/go/google.golang.org_genproto//googleapis/pubsub/v1",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//status",
         "//mettle/mempubsub",
-        "//third_party/go:cli-init",
-        "//third_party/go:genproto",
-        "//third_party/go:grpc",
-        "//third_party/go:protobuf",
-        "//third_party/go:remote-apis",
-        "//third_party/go/gocloud",
     ],
 )
 
@@ -18,6 +22,6 @@ go_test(
     srcs = ["common_test.go"],
     deps = [
         ":common",
-        "//third_party/go:testify",
+        "///third_party/go/github.com_stretchr_testify//assert",
     ],
 )
