--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -3,34 +3,40 @@ go_library(
     srcs = glob(["*.go"]),
     visibility = ["//mettle/..."],
     deps = [
+        "///third_party/go/cloud.google.com_go_pubsub//apiv1",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/client",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/command",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/filemetadata",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/uploadinfo",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_dgraph-io_ristretto//:ristretto",
+        "///third_party/go/github.com_dustin_go-humanize//:go-humanize",
+        "///third_party/go/github.com_go-redis_redis_v8//:v8",
+        "///third_party/go/github.com_golang_protobuf//proto",
+        "///third_party/go/github.com_golang_protobuf//ptypes",
+        "///third_party/go/github.com_golang_protobuf//ptypes/timestamp",
+        "///third_party/go/github.com_klauspost_compress//zstd",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_peterebden_go-copyfile//:go-copyfile",
+        "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "///third_party/go/github.com_prometheus_client_golang//prometheus/push",
+        "///third_party/go/github.com_prometheus_common//expfmt",
+        "///third_party/go/github.com_shirou_gopsutil//mem",
+        "//proto/lucidity",
+        "//third_party/proto/resourceusage",
+        "///third_party/go/gocloud.dev//pubsub",
+        "///third_party/go/golang.org_x_sync//errgroup",
+        "///third_party/go/google.golang.org_genproto//googleapis/pubsub/v1",
+        "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//status",
         "//cli",
         "//elan/rpc",
         "//grpcutil",
         "//mettle/common",
-        "//proto/lucidity",
         "//rexclient",
-        "//third_party/go:cli-init",
-        "//third_party/go:cloud_pubsub",
-        "//third_party/go:copyfile",
-        "//third_party/go:errgroup",
-        "//third_party/go:genproto",
-        "//third_party/go:godirwalk",
         "//third_party/go:golang-protobuf",
-        "//third_party/go:grpc",
-        "//third_party/go:grpc-middleware",
-        "//third_party/go:humanize",
-        "//third_party/go:protobuf",
-        "//third_party/go:psutil",
-        "//third_party/go:redis",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go:ristretto",
-        "//third_party/go:rpc",
-        "//third_party/go:zstd",
-        "//third_party/go/gocloud",
-        "//third_party/go/prometheus",
-        "//third_party/go/prometheus:prometheus_common",
         "//third_party/proto/cas",
-        "//third_party/proto/resourceusage",
     ],
 )
