--- a/rexclient/BUILD
+++ b/rexclient/BUILD
@@ -1,13 +1,18 @@
 go_library(
     name = "rexclient",
-    srcs = glob(["*.go"], exclude=["*_test.go"]),
+    srcs = glob(
+        ["*.go"],
+        exclude = ["*_test.go"],
+    ),
     visibility = ["PUBLIC"],
     deps = [
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/client",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/uploadinfo",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/google.golang.org_grpc//metadata",
         "//grpcutil",
-        "//third_party/go:cli-init",
-        "//third_party/go:grpc",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
     ],
 )
 
@@ -16,8 +21,8 @@ go_test(
     srcs = ["packs_test.go"],
     deps = [
         ":rexclient",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go:testify",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_stretchr_testify//assert",
     ],
 )
