--- a/.plzconfig
+++ b/.plzconfig
@@ -16,6 +16,7 @@ gotool = //third_party/go:toolchain|go
 coverageredesign = true
 legacyimports = false
 pleasegotool = /home/jpoole/go-rules/plz-out/bin/tools/please_go/please_go.bootstrap
+ModFile = //:go.mod
 
 [python]
 moduledir = third_party/python
@@ -31,6 +32,7 @@ target = //plugins:shell
 [plugin "proto"]
 target = //plugins:proto
 languagedef = ///go_proto//build_defs:go
+ProtocTool = //third_party/proto:protoc
 
 [plugin "go_proto"]
 target = //plugins:go-proto
