--- a/flair/BUILD
+++ b/flair/BUILD
@@ -5,11 +5,11 @@ go_binary(
     deps = [
         "///third_party/go/github.com_peterebden_go-cli-init_v4//flags",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
-        "///third_party/go/google.golang.org_grpc//:grpc",
         "//cli",
         "//flair/rpc",
         "//flair/trie",
         "//grpcutil",
+        "//third_party/go:grpc",
     ],
 )
 
