--- a/plugins/BUILD
+++ b/plugins/BUILD
@@ -1,7 +1,6 @@
 plugin_repo(
     name = "go",
-    revision = "bf218045c8e74a03e3821a8c068c9e373980d147",
-    owner = "tatskaari",
+    revision = "v1.7.0",
 )
 
 plugin_repo(
