Migrate to use go_repo (#242)
* Repo

* Got it working. Needs a new release of go-rules

* Update to released plugin

* update pelase

* Huh?

* Update proto rules

* plz linter plz

* Update release

--- a/flair/BUILD
+++ b/flair/BUILD
@@ -1,15 +1,16 @@
 go_binary(
     name = "flair",
     srcs = ["main.go"],
+    visibility = ["//package:all"],
     deps = [
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//flags",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "//cli",
         "//flair/rpc",
         "//flair/trie",
         "//grpcutil",
-        "//third_party/go:cli-init",
         "//third_party/go:grpc",
     ],
-    visibility = ["//package:all"],
 )
 
 sh_cmd(
