--- a/flair/rpc/BUILD
+++ b/flair/rpc/BUILD
@@ -3,18 +3,21 @@ go_library(
     srcs = glob(["*.go"]),
     visibility = ["//flair/..."],
     deps = [
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/asset/v1",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/semver",
+        "///third_party/go/github.com_golang_protobuf//proto",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_peterebden_go-sri//:go-sri",
+        "//proto/purity",
+        "///third_party/go/golang.org_x_sync//errgroup",
+        "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "///third_party/go/google.golang.org_grpc//health/grpc_health_v1",
+        "///third_party/go/google.golang.org_grpc//metadata",
         "//flair/trie",
         "//grpcutil",
-        "//proto/purity",
         "//rexclient",
-        "//third_party/go:cli-init",
-        "//third_party/go:errgroup",
-        "//third_party/go:genproto",
-        "//third_party/go:go-multierror",
         "//third_party/go:grpc",
-        "//third_party/go:protobuf",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go:sri",
     ],
 )
