--- a/zeal/rpc/BUILD
+++ b/zeal/rpc/BUILD
@@ -3,17 +3,20 @@ go_library(
     srcs = ["rpc.go"],
     visibility = ["//zeal/..."],
     deps = [
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/client",
+        "///third_party/go/github.com_bazelbuild_remote-apis-sdks//go/pkg/digest",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/asset/v1",
+        "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
+        "///third_party/go/github.com_golang_protobuf//ptypes",
+        "///third_party/go/github.com_golang_protobuf//ptypes/duration",
+        "///third_party/go/github.com_hashicorp_go-multierror//:go-multierror",
+        "///third_party/go/github.com_hashicorp_go-retryablehttp//:go-retryablehttp",
+        "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_peterebden_go-sri//:go-sri",
+        "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
         "//grpcutil",
         "//rexclient",
-        "//third_party/go:cli-init",
-        "//third_party/go:go-multierror",
         "//third_party/go:grpc",
-        "//third_party/go:protobuf",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go:retryablehttp",
-        "//third_party/go:rpc",
-        "//third_party/go:sri",
-        "//third_party/go/prometheus",
     ],
 )
