--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,5 @@
 [please]
-version = >=17.0.0-beta.7
+version = >=17.0.0
 
 [build]
 path = /usr/local/go/bin:/usr/local/bin:/usr/bin:/bin
@@ -15,14 +15,10 @@ importpath = github.com/thought-machine/please-servers
 gotool = //third_party/go:toolchain|go
 coverageredesign = true
 legacyimports = false
+ModFile = //:go.mod
 
 [python]
 moduledir = third_party/python
-
-[proto]
-protoctool = //third_party/proto:protoc
-protocgoplugin = //third_party/go:protoc-gen-go
-language = go
 
 [plugin "cc"]
 target = //plugins:cc
@@ -35,11 +31,12 @@ target = //plugins:shell
 [plugin "proto"]
 target = //plugins:proto
 languagedef = ///go_proto//build_defs:go
+ProtocTool = //third_party/proto:protoc
 
 [plugin "go_proto"]
 target = //plugins:go-proto
-grpcplugin = //third_party/go:protoc-gen-go-grpc
-protoplugin = //third_party/go:protoc-gen-go
+grpcplugin = ///third_party/go/google.golang.org_grpc_cmd_protoc-gen-go-grpc//:protoc-gen-go-grpc
+protoplugin = ///third_party/go/google.golang.org_protobuf//cmd/protoc-gen-go
 protodep = //third_party/go:golang-protobuf
 grpcdep = //third_party/go:grpc
 
