Add otel to graph

--- a/purity/BUILD
+++ b/purity/BUILD
@@ -3,8 +3,11 @@ go_binary(
     srcs = ["main.go"],
     visibility = ["//package:all"],
     deps = [
+        "///third_party/go/github.com_honeycombio_honeycomb-opentelemetry-go//:honeycomb-opentelemetry-go",
+        "///third_party/go/github.com_honeycombio_otel-config-go//otelconfig",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//flags",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/go.opentelemetry.io_contrib_instrumentation_net_http_otelhttp//:otelhttp",
         "//cli",
         "//purity/gc",
     ],
