--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -11,7 +11,6 @@ go_library(
         "///third_party/go/github.com_golang_protobuf//ptypes",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "///third_party/go/github.com_prometheus_client_golang//prometheus",
-        "//proto/mettle",
         "///third_party/go/gocloud.dev//pubsub",
         "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
         "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
@@ -20,6 +19,7 @@ go_library(
         "///third_party/go/google.golang.org_grpc//status",
         "//grpcutil",
         "//mettle/common",
+        "//proto/mettle",
         "//rexclient",
         "//third_party/go:grpc",
     ],
@@ -33,9 +33,6 @@ go_test(
         "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
         "///third_party/go/github.com_golang_protobuf//proto",
         "///third_party/go/github.com_golang_protobuf//ptypes",
-        "///third_party/go/github.com_stretchr_testify//assert",
-        "///third_party/go/github.com_stretchr_testify//require",
-        "//proto/mettle",
         "///third_party/go/gocloud.dev//pubsub",
         "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
         "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
@@ -43,6 +40,8 @@ go_test(
         "///third_party/go/google.golang.org_grpc//status",
         "//grpcutil",
         "//mettle/common",
+        "//proto/mettle",
         "//third_party/go:grpc",
+        "//third_party/go:testify",
     ],
 )
