--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -23,20 +23,20 @@ go_library(
         "///third_party/go/github.com_prometheus_client_golang//prometheus/push",
         "///third_party/go/github.com_prometheus_common//expfmt",
         "///third_party/go/github.com_shirou_gopsutil//mem",
-        "//proto/lucidity",
-        "//third_party/proto/resourceusage",
         "///third_party/go/gocloud.dev//pubsub",
         "///third_party/go/golang.org_x_sync//errgroup",
+        "///third_party/go/golang.org_x_time//rate",
         "///third_party/go/google.golang.org_genproto//googleapis/pubsub/v1",
         "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
-        "///third_party/go/google.golang.org_grpc//codes",
-        "///third_party/go/google.golang.org_grpc//status",
         "//cli",
         "//elan/rpc",
         "//grpcutil",
         "//mettle/common",
+        "//proto/lucidity",
         "//rexclient",
         "//third_party/go:golang-protobuf",
+        "//third_party/go:grpc",
         "//third_party/proto/cas",
+        "//third_party/proto/resourceusage",
     ],
 )
