--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -11,9 +11,8 @@ go_library(
         "///third_party/go/gocloud.dev//pubsub/gcppubsub",
         "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
         "///third_party/go/google.golang.org_genproto//googleapis/pubsub/v1",
-        "///third_party/go/google.golang.org_grpc//codes",
-        "///third_party/go/google.golang.org_grpc//status",
         "//mettle/mempubsub",
+        "//third_party/go:grpc",
     ],
 )
 
@@ -22,6 +21,6 @@ go_test(
     srcs = ["common_test.go"],
     deps = [
         ":common",
-        "///third_party/go/github.com_stretchr_testify//assert",
+        "//third_party/go:testify",
     ],
 )
