--- a/lucidity/rpc/BUILD
+++ b/lucidity/rpc/BUILD
@@ -23,6 +23,6 @@ go_test(
     deps = [
         ":rpc",
         "//proto/lucidity",
-        "//third_party/go:testify",
+        "///third_party/go/github.com_stretchr_testify//assert",
     ],
 )
