--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -21,6 +21,6 @@ go_test(
     srcs = ["common_test.go"],
     deps = [
         ":common",
-        "//third_party/go:testify",
+        "///third_party/go/github.com_stretchr_testify//assert",
     ],
 )
