--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,6 +35,9 @@ jobs:
         # We must fetch at least the immediate parents so that if this is
         # a pull request then we can checkout the head.
         fetch-depth: 2
+    - uses: actions/setup-go@v4
+      with:
+        go-version: '^1.22'
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
