--- a/grpcutil/BUILD
+++ b/grpcutil/BUILD
@@ -13,6 +13,7 @@ go_library(
         "///third_party/go/google.golang.org_grpc//grpclog",
         "///third_party/go/google.golang.org_grpc//health",
         "///third_party/go/google.golang.org_grpc//health/grpc_health_v1",
+        "///third_party/go/google.golang.org_grpc//keepalive",
         "///third_party/go/google.golang.org_grpc//metadata",
         "///third_party/go/google.golang.org_grpc//reflection",
         "///third_party/go/gopkg.in_op_go-logging.v1//:go-logging.v1",
