--- a/plugins/BUILD
+++ b/plugins/BUILD
@@ -1,31 +1,35 @@
 plugin_repo(
     name = "go",
     plugin = "go-rules",
-    revision = "v1.17.2",
+    revision = "v1.21.2",
 )
 
 plugin_repo(
     name = "cc",
     plugin = "cc-rules",
-    revision = "v0.3.2",
+    revision = "v0.4.0",
 )
 
 plugin_repo(
     name = "shell",
-    revision = "v0.1.2",
-)
-
-plugin_repo(
-    name = "proto",
-    revision = "v0.2.1",
-)
-
-plugin_repo(
-    name = "go-proto",
+    plugin = "shell-rules",
     revision = "v0.2.0",
 )
 
 plugin_repo(
+    name = "proto",
+    plugin = "proto-rules",
+    revision = "v0.4.0",
+)
+
+plugin_repo(
+    name = "go-proto",
+    plugin = "go-proto-rules",
+    revision = "v0.3.0",
+)
+
+plugin_repo(
     name = "python",
-    revision = "v1.2.4",
+    plugin = "python-rules",
+    revision = "v1.7.2",
 )
